Fix unittests